gitops/apps/auth/overlays/prod/catalog-local.yaml
---
# Source: catalog/templates/1-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-canary
  namespace: demo
spec:
  selector:
    app: catalog
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
      name: http
---
# Source: catalog/templates/1-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-stable
  namespace: demo
spec:
  selector:
    app: catalog
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
      name: http
---
# Source: catalog/templates/4-serviceMonitor.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-metrics
  namespace: demo
  labels:
    app: catalog
    metrics: "true"
spec:
  selector:
    app: catalog
  ports:
    - name: metrics
      port: 9464
      targetPort: 9464
      protocol: TCP
---
# Source: catalog/templates/3-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: api-gateway
  namespace: demo
spec:
  selector:
    istio: gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "api.localdev.me"
---
# Source: catalog/templates/11-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: catalog
  namespace: demo
spec:
  replicas: 2
  revisionHistoryLimit: 2

  selector:
    matchLabels:
      app: catalog

  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: catalog
        istio: monitor

    spec:
      containers:
        - name: catalog
          image: "devopsflow999/catalog:dev-v0.1.8"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3001
              protocol: TCP
            - name: metrics
              containerPort: 9464
              protocol: TCP

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi

  strategy:
      canary:
        stableService: catalog-stable
        canaryService: catalog-canary

        trafficRouting:
          istio:
            virtualService:
              name: catalog-vsvc
              routes:
                - primary
        steps:
          - setWeight: 10
          - setWeight: 20
          - pause:
              duration: 20s
          - setWeight: 30
          - pause:
              duration: 20s
          - setWeight: 40
          - pause:
              duration: 20s
          - setWeight: 50
          - pause:
              duration: 20s
          - setWeight: 60
          - pause:
              duration: 20s
          - setWeight: 70
          - pause:
              duration: 20s
          - setWeight: 80
          - pause:
              duration: 20s
          - setWeight: 90
          - pause:
              duration: 20s
---
# Source: catalog/templates/2-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: catalog-vsvc
  namespace: demo
spec:
  hosts:
    - "api.localdev.me"
  gateways:
    - "api-gateway"
  http:

    # Canary route
    - name: catalog-canary-debug
      match:
        - uri:
            prefix: "/catalog/"
          headers:
            x-canary:
              exact: "true"
        - uri:
            exact: "/catalog"
          headers:
            x-canary:
              exact: "true"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: catalog-canary
            port:
              number: 3001
          weight: 100
      corsPolicy:
        allowOrigins:
          - exact: "http://frontend.localdev.me"
        allowMethods: ["GET","POST","PUT","DELETE","OPTIONS"]
        allowHeaders: ["*"]
        allowCredentials: true
        maxAge: "1h"

    # Stable route
    - name: primary
      match:
        - uri:
            prefix: "/catalog/"
        - uri:
            exact: "/catalog"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: catalog-stable
            port:
              number: 3001
          weight: 100
        - destination:
            host: catalog-canary
            port:
              number: 3001
          weight: 0
      corsPolicy:
        allowOrigins:
          - exact: "http://frontend.localdev.me"
        allowMethods: ["GET","POST","PUT","DELETE","OPTIONS"]
        allowHeaders: ["*"]
        allowCredentials: true
        maxAge: "1h"
